# live-alert

./: .env  .gitignore  README.md  main.py  pyproject.toml
static/: index.html
